statefulset.yml
apiVersion: apps/v1
kind: StatefulSet
metadata:
  name: mysql
spec:
  serviceName: mysqldb
  replcas: 1
  selector:
    matchLabels:
      app: appdb
  template:
    metadata:
      labels:
        app: appdb
    spec:
      containers:
        - name: dbcont
          image: swarnakalle/blood:db
          ports:
            - containerPort: 3306
        #secret integration
      resources:
        requests:
          cpu: "100m"
          memory: "128Mi"
        limits:
          cpu: "200m"
          memory: "256Mi"    
        
      volumeMounts:
        - name: pvc1
          mountPath: /usr/share/nginx/html/

  volumeClaimTemplates:
    - metadata:
        name: pvc1
      spec:
        accessModes:
          - ReadWriteOnce
        storageClassName: gp2
        resources:
          requests:
            storage: 2Gi
