app-service.yml
apiVersion: v1
kind: Service
metadata:
  name: bankapp-service
spec:
  selector: 
    app: swiggy
  type: ClusterIP
  ports:
    - port: 80
      targetPort: 80
