dbservice.yml
apiVersion: v1
kind: Service
metadata:
  name: mysqldb
spec:
  selector: 
    app: appdb
  clusterIp: None
  ports:
    - port: 3306
      targetPort: 3306
