ingress.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: bankapp-ingress
annotations:
  nginx.ingress.kubernetes.io/rewrite-target: /
spec:
  ingressClassName: nginx
  rules:
  - http: 
      paths:
        - path: /
          pathType: Prefix
          backend:
            service:
              name: bankapp-service
              port: 
                number: 80
