networkpolicies.yml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: bankapp-allow-ingress
spec:
  podSelector:
    matchLabels:
      app: swiggy

  policyTypes:
    - Ingress
    - Egress

  # Allow traffic from pods in the ingress-nginx namespace
  ingress:
    - from:
        - namespaceSelector:
            matchLabels:
              kubernetes.io/metadata.name: ingress-nginx
      ports:
        - protocol: TCP
          port: 80

  egress:
    # Allow connection to the database pods
    - to:
        - podSelector:
            matchLabels:
              app: appdb
      ports:
        - protocol: TCP
          port: 3306

    # Allow DNS queries to kube-system
    - to:
        - namespaceSelector:
            matchLabels:
              kubernetes.io/metadata.name: kube-system
      ports:
        - protocol: UDP
          port: 53
        - protocol: TCP
          port: 53
